feat(auth): added social providers authentication

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Kebetoo</string>
+    <string name="facebook_app_id">869081526922862</string>
 </resources>
